force-app/main/default/objects/BGCK__Choice__c/BGCK__Choice__c.object-meta.xml
<CustomObject>
    <label>Choice</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Choices</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>