force-app/main/default/objects/BGCK__Choice__c/fields/BGCK__Display_Value__c.field-meta.xml
<CustomField>
    <fullName>BGCK__Display_Value__c</fullName>
    <label>Display Value</label>
    <length>10000</length>
    <type>Html</type>
</CustomField>