force-app/main/default/objects/BGCK__Choice__c/fields/BGCK__Order__c.field-meta.xml
<CustomField>
    <fullName>BGCK__Order__c</fullName>
    <defaultValue>1</defaultValue>
    <description>Choices will be sorted by the value in this field, then alphabetically</description>
    <label>Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>