force-app/main/default/objects/BGCK__Choice__c/fields/BGCK__Question_Type__c.field-meta.xml
<CustomField>
    <fullName>BGCK__Question_Type__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Question Type</label>
    <referenceTo>BGCK__Question_Type__c</referenceTo>
    <relationshipLabel>Choices</relationshipLabel>
    <relationshipName>Choices</relationshipName>
    <type>Lookup</type>
</CustomField>